# clothes_recognition

./: EMD.m  EMD_MATRIX.m  ExperimentContinouosPer.m  LGSR.m  README.md  a1_save_data.m  a2_verify_data.m  a3_example_recognition_ROS.m  a4_local_features_llc.m  b1_clothes_classification.m  c1_online_classification.m  c2_extract_features.m  c3_local_features_llc.m  c4_features_integration.m  check.m  clothes_identity_main_script.m  coding_main_script.m  demo.m  evaluate_lgsr.m  evaluate_lgsr_withclassfier_test.m  evaluate_lgsr_withclassfier_train.m  example_recognition_ROS.m  extract_feature_main_script.m  search_featureweight.m
Classification/: x_fold_CV.m
FINDDD/: ExtractFINDDDFeature.m
drtoolbox/: compute_mapping.m  generate_data.m  intrinsic_dim.m  test_toolbox.m
drtoolbox/techniques/: llc.m
matlab_srvs/uchile_srvs/: CMakeLists.txt  package.xml
matlab_srvs/uchile_srvs/srv/: ImagesSequence.srv  SaveImages.srv
ug_srvs/ug_srvs/: CMakeLists.txt  package.xml
